<resources>
    <string name="app_name">IMU Timer</string>
    <string name="action_settings">Settings</string>
    <string name="star_movement">Star Movement</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="stop_movement">Stop Movement</string>
    <string name="stop_exercise">Stop Exercise</string>
    <string name="timeview">timeView</string>
    <string name="save_to_file">Save to File</string>
    <string name="fileName">Enter File Name</string>
    <string name="clear">Clear</string>
    <string name="start_activity">Start Activity</string>
    <string name="stop_activity">Stop Activity</string>
    <string name="choose_label">Choose Label</string>
    <string name="select_from_frequently_used_labels">Select from frequently used labels</string>
    <string name="enter_new_labels">Enter new labels</string>
    <string name="select">Select</string>
    <string name="add_label">Add Label</string>
    <string name="enter_label">Enter Label</string>
    <string name="enter_participant_name">Enter participant name</string>
</resources>
