<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Label">


    <EditText
        android:id="@+id/label_name"
        android:layout_width="112dp"
        android:layout_height="46dp"
        android:hint="@string/enter_label"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lv"
        app:layout_constraintEnd_toStartOf="@+id/addLabelBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/addLabelBtn"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:onClick="addItems"
        android:text="@string/add_label"
        app:layout_constraintBottom_toTopOf="@+id/lv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_name"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="297dp"
        android:layout_height="199dp"
        android:drawSelectorOnTop="false"
        android:listSelector="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/selectBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name" />

    <Button
        android:id="@+id/selectBtn"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:text="@string/select"
        android:onClick="selectBtnAction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="266dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toTopOf="@+id/label_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/enter_new_labels"

            />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/select_from_frequently_used_labels"
            android:checked="true"
            />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>